2004-03-01  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (Executable.Spawn): Under Windows, convert all
	environment variables to Unicode if any of them are Unicode.
	* NEWS: Mention this improvement.

2004-02-27  Mark Mitchell  <mark@codesourcery.com>

	* setup.py: Install both "qmtest" and "qmtest.py" on all systems.
	* qm/__version.py:Advance to 2.1.2.
	
2004-02-18  Mark Mitchell  <mark@codesourcery.com>

	* qm/__version.py: Advance to 2.1.1.

	* qm/executable.py (TimeoutExecutable.Run): Handle failure to
	locate the executable file robustly under Windows.

2004-02-15  Nathaniel Smith  <njs@codesourcery.com>

	* qm/common.py (open_temporary_file_fd): Change default suffix to
	empty string.
	(open_temporary_file): Likewise.
	* qm/test/classes/command.py (ShellScriptTest.Run): Likewise.
	
2004-02-13  Mark Mitchell  <mark@codesourcery.com>

	* qm/common.py (open_temporary_file_fd): Add suffix parameter.
	(open_temporary_file): Add mode and suffix parameters.
	* qm/platform.py (get_shell_for_script): Use /c on Windows.
	* qm/test/classes/command.py (ShellScriptTest): Make the 
	script have a ".bat" extension on Windows.
	* NEWS: Mention this fix.

2004-02-08  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/web/web.py (ShowSuitePage.MakeDeleteScript): Return the
	result of MakeConfirmationDialog.

2004-02-04  Anders Hasselqvist <Anders.Hasselqvist@tss.teleca.se>

	* qm/fields.py (ChoiceField.FormatValueAsHtml): Make sure there is
	a name for the field.

2004-01-28  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/explicit_suite.py (ExplicitSuite.is_implicit):
	Give it a default value of false.
	(ExplicitSuite.IsImplicit): Fix thinko.
	* qm/test/classes/xml_database.py (XMLDatabase._GetSuiteFromPath): 

2004-01-18  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/cmdline.py (_version_output): Add 2004 to list of
	copyright dates.

2004-01-15  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/xml_database.py